feat: implement logout API
