# routes/api.php
@@ -19,4 +19,6 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::get('tasks/{task}/comments', [CommentController::class, 'index']);
     Route::post('tasks/{task}/comments', [CommentController::class, 'store']);
     Route::apiResource('comments', CommentController::class)->only(['show', 'update', 'destroy']);
+
+    Route::post('/logout', [AuthController::class, 'logout']);
 });
